Added responsive images lazysizes, polish and grain

--- a/index.html
+++ b/index.html
@@ -57,7 +57,19 @@
             </div>
         </div>
 
-        <a href="./about">Back</a>
+        <div class="front-info">
+            <img class="shadow-front lazyload" src="./assets/images/shadow-dissolve.png" 
+            data-sizes="auto" 
+            data-src="./assets/images/shadow-dissolve.png"
+            data-srcset="./assets/images/shadow-dissolve.png 500w,
+            ./assets/images/shadow-dissolve.png 640w,
+            ./assets/images/shadow-dissolve.png 1024w"
+            alt="shadow">
+
+            <h2>
+                We’re an independent branding and experience design company working at the intersection of design and technology.  
+            </h2>
+        </div>
     </main>
 
     <footer id="contact">
