--- a/index.html
+++ b/index.html
@@ -50,8 +50,15 @@
         <div class="header-big">
             
             <h1 g-component="SeparateText" class="heading-one">We’re a design studio that mixes digital and branding to create <span>amazing websites</span></h1>
-            <a href="work" class="btn btn--outline" title="work">Explore works</a>
-            <button class="button button--outline">See showreel</button>
+            <a href="work"                 
+            class="btn btn--outline"
+            style="--btn-color: #FBF778;
+            --btn-text: #2C2490;" title="work">Explore works</a>
+            <button                 
+            class="btn btn--outline"
+            style="--btn-color: #FBF778;
+            --btn-text: #2C2490;">See showreel</button>
+
             <div class="header-big__bg">
                 <iframe title="Fiasco Design Showreel 2022" src="https://player.vimeo.com/video/667297305?h=6bd9f8bdc5&amp;dnt=1&amp;app_id=122963&amp;controls=0&amp;hd=1&amp;autohide=1&amp;muted=1&amp;autoplay=1&amp;loop=1&amp;portrait=0&amp;byline=0&amp;title=0" width="640" height="360" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen="" data-ready="true"></iframe>
             </div>
@@ -66,9 +73,19 @@
             ./assets/images/shadow-dissolve.png 1024w"
             alt="shadow">
 
-            <h2 class="heading-two">
-                We’re an independent branding and experience design company working at the intersection of design and technology.  
-            </h2>
+            <div class="front-info__text">
+                <h2 class="heading-two">
+                    We’re an independent branding and experience design company working at the intersection of design and technology.  
+                </h2>
+            </div>
+
+            <img class="shadow-front-bottom lazyload" src="./assets/images/shadow-dissolve.png" 
+            data-sizes="auto" 
+            data-src="./assets/images/shadow-dissolve.png"
+            data-srcset="./assets/images/shadow-dissolve.png 500w,
+            ./assets/images/shadow-dissolve.png 640w,
+            ./assets/images/shadow-dissolve.png 1024w"
+            alt="shadow">
         </div>
 
         <article class="case-intro" 
