Fixed bodymovin and styling, fix for cannot tween null target

--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Fjaka - About</title>
+    <title>About | Fjaka</title>
     <link href="./favicon.png" rel="shortcut icon" type="image/x-icon">
     <link rel="stylesheet" href="https://use.typekit.net/prw8hpu.css">
     <link rel="stylesheet" href="./assets/normalize.css">
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 </head>
 <body class="about">
-    <header class="header">
+    <header class="header" id="header">
         <figure class="logo">
             <a href="./">
                 <svg width="78" height="32" viewBox="0 0 78 32">
