--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 </head>
 <body class="front">
-    <header class="header">
+    <header class="header" id="header">
         <figure class="logo">
             <a href="./">
                 <svg width="78" height="32" viewBox="0 0 78 32">
@@ -31,16 +31,16 @@
         <nav>
             <ul>
                 <li>
-                    <a href="./work.html">Work</a>
+                    <a class="text-link" href="/work.html">Work</a>
                 </li>
                 <li>
-                    <a href="./about.html">About</a>
+                    <a class="text-link" href="/about.html">About</a>
                 </li>
                 <li>
-                    <a href="./shop.html">Shop</a>
+                    <a class="text-link" href="/shop.html">Shop</a>
                 </li>
                 <li>
-                    <a href="#contact">Contact</a>
+                    <a class="text-link" href="#contact">Contact</a>
                 </li>
             </ul>
         </nav>
@@ -54,7 +54,7 @@
             
             <h1 g-component="SeparateText" class="heading-one">We’re a design studio that mixes digital and branding to create <span>amazing websites</span></h1>
             <div class="btn-wrapper">
-                <a href="./work.html"                 
+                <a href="/work.html"                 
                 class="btn btn--outline"
                 style="--btn-color: #FBF778;
                 --btn-text: #2C2490;" title="work">Explore works</a>
