--- a/shop.html
+++ b/shop.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Fjaka - Shop</title>
+    <title>Shop | Fjaka</title>
     <link href="./favicon.png" rel="shortcut icon" type="image/x-icon">
     <link rel="stylesheet" href="https://use.typekit.net/prw8hpu.css">
     <link rel="stylesheet" href="./assets/normalize.css">
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 </head>
 <body class="shop">
-    <header class="header">
+    <header class="header" id="header">
         <figure class="logo">
             <a href="./">
                 <svg width="78" height="32" viewBox="0 0 78 32">
@@ -31,16 +31,16 @@
         <nav>
             <ul>
                 <li>
-                    <a href="./work.html">Work</a>
+                    <a class="text-link" href="./work.html">Work</a>
                 </li>
                 <li>
-                    <a href="./about.html">About</a>
+                    <a class="text-link" href="./about.html">About</a>
                 </li>
                 <li class="active">
-                    <a href="./shop.html">Shop</a>
+                    <a class="text-link" href="./shop.html">Shop</a>
                 </li>
                 <li>
-                    <a href="#contact">Contact</a>
+                    <a class="text-link" href="#contact">Contact</a>
                 </li>
             </ul>
         </nav>
