Polish of footer

--- a/about.html
+++ b/about.html
@@ -56,6 +56,7 @@
             <a href="https://github.com/giantcz/gia" class="button button--purple button--fade">Repo</a>
         </div>
     </main>
+    <script src="../src/js/bodymovin.js"></script>
     <script src="./assets/app.js"></script>
 </body>
 </html>
