--- a/index.html
+++ b/index.html
@@ -181,6 +181,7 @@
     <footer id="contact">
 
     </footer>
+    <script src="../src/js/bodymovin.js"></script>
     <script src="./assets/app.js"></script>
 </body>
 </html>
