--- a/shop.html
+++ b/shop.html
@@ -98,6 +98,7 @@
             </section>
         </div>
     </main>
+    <script src="../src/js/bodymovin.js"></script>
     <script src="./assets/app.js"></script>
 </body>
 </html>
