--- a/work.html
+++ b/work.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Work | Fjaka</title>
-    <link href="./favicon.png" rel="shortcut icon" type="image/x-icon">
+    <link href="../favicon.png" rel="shortcut icon" type="image/x-icon">
     <link rel="stylesheet" href="https://use.typekit.net/prw8hpu.css">
     <link rel="stylesheet" href="./assets/normalize.css">
     <link rel="stylesheet" href="./assets/main.css">
@@ -47,7 +47,7 @@
     </header>
 
     <main class="wrapper transition-fade" id="swup">
-        <div class="wrapper-inner">
+        <div class="wrapper-about">
             <h1 g-component="SeparateText" class="big-header-one">All work <del>No Play</del></h1>
         </div>
 
