Fixed lottie bug not reloading

--- a/work.html
+++ b/work.html
@@ -47,7 +47,7 @@
     </header>
 
     <main class="wrapper transition-fade" id="swup">
-        <div class="wrapper-about">
+        <div class="wrapper-inner">
             <h1 g-component="SeparateText" class="big-header-one">All work <del>No Play</del></h1>
         </div>
 
@@ -122,7 +122,7 @@
             </div>
         </div>
     </main>
-    <script src="../src/js/bodymovin.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bodymovin/5.6.5/lottie.min.js"></script>
     <script src="./assets/app.js"></script>
 </body>
 </html>
