--- a/about/index.html
+++ b/about/index.html
@@ -47,7 +47,7 @@
             <a href="https://github.com/giantcz/gia" class="button button--purple button--fade">Repo</a>
         </div>
     </main>
-    <script src="../src/js/bodymovin.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bodymovin/5.6.5/lottie.min.js"></script>
     <script src="./assets/app.js"></script>
 </body>
 </html>
