--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
     <footer id="contact">
 
     </footer>
-    <script src="../src/js/bodymovin.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bodymovin/5.6.5/lottie.min.js"></script>
     <script src="./assets/app.js"></script>
 </body>
 </html>
