--- a/shop.html
+++ b/shop.html
@@ -98,7 +98,7 @@
             </section>
         </div>
     </main>
-    <script src="../src/js/bodymovin.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bodymovin/5.6.5/lottie.min.js"></script>
     <script src="./assets/app.js"></script>
 </body>
 </html>
