--- a/work.html
+++ b/work.html
@@ -48,10 +48,22 @@
 
     <main class="wrapper transition-fade" id="swup">
         <div class="wrapper-inner">
-            <h1 g-component="SeparateText" class="big-header-one">All work <del>No Play</del></h1>
+            <h1 g-component="SeparateText" g-options='{"delay": 0.25}' class="big-header-one">All work <del>No Play</del></h1>
         </div>
 
         <div class="case-wrapper">
+
+            <article class="case-small animate__animated animate__fadeInUp">
+                <div class="case-small__inner" style="--background: #EFEEE8; --text: #1E1E1E;">
+                    <a href="#" data-swup-transition="case-transition"></a>
+                    <h2>Glyfit</h2>
+                    <div class="category-wrapper">
+                        <span class="btn-category">Product</span>
+                        <span class="btn-category">Digital</span>
+                    </div>
+                </div>
+            </article>
+
             <article class="case-small animate__animated animate__fadeInUp">
                 <div class="case-small__inner" style="--background: #E8E8DF; --text: #141414;">
                     <a href="#" data-swup-transition="case-transition"></a>
@@ -68,15 +80,89 @@
                     <h2>Nori Kit</h2>
                     <div class="category-wrapper">
                         <span class="btn-category">Product</span>
+                        <span class="btn-category">Branding</span>
+                        <span class="btn-category">Digital</span>
                     </div>
                 </div>
             </article>
             <article class="case-small animate__animated animate__fadeInUp">
-                <div class="case-small__inner" style="--background: #DC5842; --text: #E6DAD8;">
+                <div class="case-small__inner" style="--background: #EBEAE7; --text: #DC5842;">
                     <a href="#" data-swup-transition="case-transition"></a>
                     <h2>Houses of Malmö</h2>
                     <div class="category-wrapper">
                         <span class="btn-category">E-commerce</span>
+                        <span class="btn-category">Branding</span>
+                    </div>
+                </div>
+            </article>
+
+            <article class="case-small animate__animated animate__fadeInUp">
+                <div class="case-small__inner" style="--background: #E8E8DF; --text: #141414;">
+                    <a href="#" data-swup-transition="case-transition"></a>
+                    <h2>ThredX app</h2>
+                    <div class="category-wrapper">
+                        <span class="btn-category">Product</span>
+                    </div>
+                </div>
+            </article>
+
+            <article class="case-small animate__animated animate__fadeInUp">
+                <div class="case-small__inner" style="--background: #000000; --text: #DFE1EB;">
+                    <a href="#" data-swup-transition="case-transition"></a>
+                    <h2>Lightstage</h2>
+                    <div class="category-wrapper">
+                        <span class="btn-category">Branding</span>
+                    </div>
+                </div>
+            </article>
+
+            <article class="case-small animate__animated animate__fadeInUp">
+                <div class="case-small__inner" style="--background: #121212; --text: #eeeeee;">
+                    <a href="#" data-swup-transition="case-transition"></a>
+                    <h2>Architechts</h2>
+                    <div class="category-wrapper">
+                        <span class="btn-category">Digital</span>
+                    </div>
+                </div>
+            </article>
+
+            <article class="case-small animate__animated animate__fadeInUp">
+                <div class="case-small__inner" style="--background: #CECFD0; --text: #8D56E1;">
+                    <a href="#" data-swup-transition="case-transition"></a>
+                    <h2>Montana Procreate</h2>
+                    <div class="category-wrapper">
+                        <span class="btn-category">Product</span>
+                        <span class="btn-category">Digital</span>
+                    </div>
+                </div>
+            </article>
+
+            <article class="case-small animate__animated animate__fadeInUp">
+                <div class="case-small__inner" style="--background: #EDF0F3; --text: #458EEC;">
+                    <a href="#" data-swup-transition="case-transition"></a>
+                    <h2>Glas In</h2>
+                    <div class="category-wrapper">
+                        <span class="btn-category">Digital</span>
+                    </div>
+                </div>
+            </article>
+
+            <article class="case-small animate__animated animate__fadeInUp">
+                <div class="case-small__inner" style="--background: #E6DFC8; --text: #405C41;">
+                    <a href="#" data-swup-transition="case-transition"></a>
+                    <h2>Friend Jen 420</h2>
+                    <div class="category-wrapper">
+                        <span class="btn-category">Branding</span>
+                    </div>
+                </div>
+            </article>
+
+            <article class="case-small animate__animated animate__fadeInUp">
+                <div class="case-small__inner" style="--background: #FFF7F0; --text: #1D7260;">
+                    <a href="#" data-swup-transition="case-transition"></a>
+                    <h2>Friend Jen</h2>
+                    <div class="category-wrapper">
+                        <span class="btn-category">Digital</span>
                         <span class="btn-category">Branding</span>
                     </div>
                 </div>
