--- a/index.html
+++ b/index.html
@@ -127,13 +127,10 @@
         --text-color: #141414;
         --background-color: #E8E8DF;
         ">
-            <img class="case-intro__pic lazyload" src="./assets/images/case-intro/nori.png" 
-            data-sizes="auto" 
-            data-src="./assets/images/case-intro/thredx.png"
-            data-srcset="./assets/images/case-intro/thredx.png 500w,
-            ./assets/images/case-intro/thredx.png 640w,
-            ./assets/images/case-intro/thredx.png 1024w"
-            alt="ThredX intro image">
+            <video class="case-intro__pic" muted playsinline autoplay="autoplay" style="pointer-events: none;">
+                <source src="../assets/images/thredx-video-header.mp4" type="video/mp4" />
+            </video>
+
             <div class="case-intro__text">
 
                 <div class="case-intro__text__inner">
