Added shinings to front

--- a/index.html
+++ b/index.html
@@ -46,8 +46,6 @@
         </nav>
     </header>
 
-    <span class="transition-circle"></span>
-
     <main class="wrapper" id="swup">
         
         <div class="header-big">
@@ -82,6 +80,9 @@
                 <h2 g-component="SeparateText" class="heading-one" data-aos="fade">
                     Some of our latest and greatest work 
                 </h2>
+
+                <div id="stars"></div>
+                <div id="stars-2"></div>
             </div>
 
             <img class="shadow-front-bottom lazyload" src="./assets/images/shadow-dissolve.png" 
