Added fullsize link to shop section

--- a/shop.html
+++ b/shop.html
@@ -52,6 +52,7 @@
             
             <section class="shop-wrapper">
                 <article class="shop-item animate__animated animate__fadeInUp">
+                    <a href="#" target="_blank" class="fullsize-link"></a>
                     <img class="shop-item__pic lazyload" src="./assets/images/shop/nori-shop.png" 
                     data-sizes="auto" 
                     data-src="./assets/images/shop/nori-shop.png"
@@ -67,6 +68,7 @@
                 </article>
 
                 <article class="shop-item animate__animated animate__fadeInUp">
+                    <a href="#" target="_blank" class="fullsize-link"></a>
                     <img class="shop-item__pic lazyload" src="./assets/images/shop/grain-shop.png" 
                     data-sizes="auto" 
                     data-src="./assets/images/shop/grain-shop.png"
@@ -82,6 +84,7 @@
                 </article>
 
                 <article class="shop-item animate__animated animate__fadeInUp">
+                    <a href="#" target="_blank" class="fullsize-link"></a>
                     <img class="shop-item__pic lazyload" src="./assets/images/shop/vimeo-shop.png" 
                     data-sizes="auto" 
                     data-src="./assets/images/shop/vimeo-shop.png"
