--- a/about.html
+++ b/about.html
@@ -33,16 +33,16 @@
         <nav>
             <ul>
                 <li>
-                    <a href="./work.html">Work</a>
+                    <a href="../work.html">Work</a>
                 </li>
                 <li class="active">
-                    <a href="./about.html">About</a>
+                    <a href="../about.html">About</a>
                 </li>
                 <li>
-                    <a href="./shop.html">Shop</a>
+                    <a href="../shop.html">Shop</a>
                 </li>
                 <li>
-                    <a href="#contact">Contact</a>
+                    <a href="../contact.html">Contact</a>
                 </li>
             </ul>
         </nav>
