--- a/shop.html
+++ b/shop.html
@@ -40,7 +40,7 @@
                     <a class="text-link" href="./shop.html">Shop</a>
                 </li>
                 <li>
-                    <a class="text-link" href="#contact">Contact</a>
+                    <a href="../contact.html">Contact</a>
                 </li>
             </ul>
         </nav>
