added contact page

--- a/about.html
+++ b/about.html
@@ -42,7 +42,7 @@
                     <a href="../shop.html">Shop</a>
                 </li>
                 <li>
-                    <a href="../contact.html">Contact</a>
+                    <a href="./contact.html">Contact</a>
                 </li>
             </ul>
         </nav>
