--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <a class="text-link" href="/shop.html">Shop</a>
                 </li>
                 <li>
-                    <a href="../contact.html">Contact</a>
+                    <a href="/contact.html">Contact</a>
                 </li>
             </ul>
         </nav>
