Added animations for header top

--- a/about.html
+++ b/about.html
@@ -50,8 +50,8 @@
     <main class="wrapper transition-fade" id="swup">
         <div class="wrapper-about">
             <div class="about-hand">
-                <div id="hand"> </div>
-                <img src="assets/images/handbot.png" width="433" alt="" class="hand-ball-graphic">
+                <div id="hand" class="animate__animated animate__fadeIn animate__delay-1s"> </div>
+                <img src="assets/images/handbot.png" width="433" alt="" class="hand-ball-graphic animate__animated animate__fadeIn">
             </div>
             
             <h1 class="hide">About Fjaka</h1>
