--- a/about.html
+++ b/about.html
@@ -12,7 +12,6 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 </head>
 <body class="about">
-    <canvas id="noise" class="noise"></canvas>
     
     <header class="header" id="header">
         <figure class="logo">
@@ -42,7 +41,7 @@
                     <a href="../shop.html">Shop</a>
                 </li>
                 <li>
-                    <a href="./contact.html">Contact</a>
+                    <a class="text-link" href="./contact.html">Contact</a>
                 </li>
             </ul>
         </nav>
@@ -128,11 +127,11 @@
         </footer>
 
         <div class="post-footer col-12 p22" style="--background-post-footer: #0A2922; --background-footer-text: #FBF778;">
-            <div class="col-3" data-aos="fade">
+            <div class="col-3">
                 <h3 class="heading-four">Follow us</h3>
             </div>
 
-            <div class="col-6" data-aos="fade">
+            <div class="col-6">
                 <ul>
                     <li>
                         <a class="heading-four footer-link" href="https://www.behance.net/fjaka" target="_blank">Behance</a>
@@ -146,7 +145,7 @@
                 </ul>
             </div>
 
-            <div class="col-3" data-aos="fade">
+            <div class="col-3">
                 <a class="paragraph" href="https://www.google.com/maps/place/Adelgatan+19A,+211+22+Malm%C3%B6/@55.6071186,12.9995299,3a,75y,333.85h,92.55t/data=!3m6!1e1!3m4!1s8UrgduxmWdv4VqvRZjxnHQ!2e0!7i13312!8i6656!4m5!3m4!1s0x4653a3fc1fba1941:0x8350d79b5254a276!8m2!3d55.6072002!4d12.9996335" target="_blank">Adelgatan 19a <br>21122 Malmö</a>
                 <p>© 2022 by Fjaka</p>
                 <a class="paragraph footer-link" href="/manifesto.html">Manifesto</a>
