--- a/contact.html
+++ b/contact.html
@@ -40,7 +40,7 @@
                     <a class="text-link" href="./shop.html">Shop</a>
                 </li>
                 <li class="active">
-                    <a href="./contact.html">Contact</a>
+                    <a class="text-link" href="./contact.html">Contact</a>
                 </li>
             </ul>
         </nav>
@@ -55,7 +55,7 @@
             <div class="col-12 push-4-11">
                 <h1 g-component="SeparateText" class="big-header-one">Let’s create 
                 your next idea</h1>
-                <p class="animate__animated animate__fadeIn animate__delay-1s">We work closely with you to pin down the problem, hone the brief, and shape the right team to create the solution your customers didn’t know they wanted.</p>
+                <p class="animate__animated animate__fadeIn animate__delay-1s">We'll work closely with you to pin down the problem, hone the brief, and shape the right team to create the solution your customers didn’t know they wanted.</p>
             </div>
 
             <div class="col-3 animate__animated animate__fadeIn animate__delay-1s push-4-8">
