--- a/shop.html
+++ b/shop.html
@@ -40,7 +40,7 @@
                     <a class="text-link" href="./shop.html">Shop</a>
                 </li>
                 <li>
-                    <a href="./contact.html">Contact</a>
+                    <a class="text-link" href="./contact.html">Contact</a>
                 </li>
             </ul>
         </nav>
@@ -52,7 +52,7 @@
             
             <section class="shop-wrapper">
                 <article class="shop-item animate__animated animate__fadeInUp">
-                    <a href="#" target="_blank" class="fullsize-link"></a>
+                    <a href="http://norikit.com/?ref=fjakashop" target="_blank" class="fullsize-link"></a>
                     <img class="shop-item__pic lazyload" src="./assets/images/shop/nori-shop.png" 
                     data-sizes="auto" 
                     data-src="./assets/images/shop/nori-shop.png"
@@ -67,7 +67,7 @@
                     <p class="shop-item__text">Nori Kit combines the best parts of productivity and design with a complete wireframe kit for Figma.</p>
                 </article>
 
-                <article class="shop-item animate__animated animate__fadeInUp">
+                <!-- <article class="shop-item animate__animated animate__fadeInUp">
                     <a href="#" target="_blank" class="fullsize-link"></a>
                     <img class="shop-item__pic lazyload" src="./assets/images/shop/grain-shop.png" 
                     data-sizes="auto" 
@@ -81,10 +81,10 @@
                         <span class="shop-item__price paragraph">Free</span>
                     </div>
                     <p class="shop-item__text">Working with textures often? We do too, and we want to give back to you. Meet our Figma file with textures.</p>
-                </article>
+                </article> -->
 
                 <article class="shop-item animate__animated animate__fadeInUp">
-                    <a href="#" target="_blank" class="fullsize-link"></a>
+                    <a href="https://www.figma.com/community/file/1128985806466447472" target="_blank" class="fullsize-link"></a>
                     <img class="shop-item__pic lazyload" src="./assets/images/shop/vimeo-shop.png" 
                     data-sizes="auto" 
                     data-src="./assets/images/shop/vimeo-shop.png"
@@ -114,11 +114,11 @@
     </footer>
 
     <div class="post-footer col-12 p22" style="--background-post-footer: #0081A7; --background-footer-text: #FEF8E2;">
-        <div class="col-3" data-aos="fade">
+        <div class="col-3">
             <h3 class="heading-four">Follow us</h3>
         </div>
 
-        <div class="col-6" data-aos="fade">
+        <div class="col-6">
             <ul>
                 <li>
                     <a class="heading-four footer-link" href="https://www.behance.net/fjaka" target="_blank">Behance</a>
@@ -132,7 +132,7 @@
             </ul>
         </div>
 
-        <div class="col-3" data-aos="fade">
+        <div class="col-3">
             <a class="paragraph" href="https://www.google.com/maps/place/Adelgatan+19A,+211+22+Malm%C3%B6/@55.6071186,12.9995299,3a,75y,333.85h,92.55t/data=!3m6!1e1!3m4!1s8UrgduxmWdv4VqvRZjxnHQ!2e0!7i13312!8i6656!4m5!3m4!1s0x4653a3fc1fba1941:0x8350d79b5254a276!8m2!3d55.6072002!4d12.9996335" target="_blank">Adelgatan 19a <br>21122 Malmö</a>
             <p>© 2022 by Fjaka</p>
             <a class="paragraph footer-link" href="/manifesto.html">Manifesto</a>
