--- a/work.html
+++ b/work.html
@@ -40,7 +40,7 @@
                     <a class="text-link" href="/shop.html">Shop</a>
                 </li>
                 <li>
-                    <a href="./contact.html">Contact</a>
+                    <a class="text-link" href="./contact.html">Contact</a>
                 </li>
             </ul>
         </nav>
@@ -87,7 +87,7 @@
             </article>
             <article class="case-small animate__animated animate__fadeInUp">
                 <div class="case-small__inner" style="--background: #EBEAE7; --text: #DC5842;">
-                    <a href="#" data-swup-transition="case-transition"></a>
+                    <a href="./work/hom.html" data-swup-transition="case-transition"></a>
                     <h2>Houses of Malmö</h2>
                     <div class="category-wrapper">
                         <span class="btn-category">E-commerce</span>
@@ -183,11 +183,11 @@
         </footer>
 
         <div class="post-footer col-12 p22" style="--background-post-footer: #0081A7; --background-footer-text: #FEF8E2;">
-            <div class="col-3" data-aos="fade">
+            <div class="col-3">
                 <h3 class="heading-four">Follow us</h3>
             </div>
 
-            <div class="col-6" data-aos="fade">
+            <div class="col-6">
                 <ul>
                     <li>
                         <a class="heading-four footer-link" href="https://www.behance.net/fjaka" target="_blank">Behance</a>
@@ -201,7 +201,7 @@
                 </ul>
             </div>
 
-            <div class="col-3" data-aos="fade">
+            <div class="col-3">
                 <a class="paragraph" href="https://www.google.com/maps/place/Adelgatan+19A,+211+22+Malm%C3%B6/@55.6071186,12.9995299,3a,75y,333.85h,92.55t/data=!3m6!1e1!3m4!1s8UrgduxmWdv4VqvRZjxnHQ!2e0!7i13312!8i6656!4m5!3m4!1s0x4653a3fc1fba1941:0x8350d79b5254a276!8m2!3d55.6072002!4d12.9996335" target="_blank">Adelgatan 19a <br>21122 Malmö</a>
                 <p>© 2022 by Fjaka</p>
                 <a class="paragraph footer-link" href="/manifesto.html">Manifesto</a>
