Added more cases

--- a/work.html
+++ b/work.html
@@ -54,6 +54,18 @@
         <div class="case-wrapper">
 
             <article class="case-small animate__animated animate__fadeInUp">
+                <div class="nori-intro case-small__inner" style="--background: #F3F5F6; --text: #4050F7;">
+                    <a href="/work/nori.html" data-swup-transition="case-transition"></a>
+                    <h2>Nori Kit</h2>
+                    <div class="category-wrapper">
+                        <span class="btn-category">Product</span>
+                        <span class="btn-category">Branding</span>
+                        <span class="btn-category">Digital</span>
+                    </div>
+                </div>
+            </article>
+
+            <article class="case-small animate__animated animate__fadeInUp">
                 <div class="case-small__inner" style="--background: #EFEEE8; --text: #1E1E1E;">
                     <a href="#" data-swup-transition="case-transition"></a>
                     <h2>Glyfit</h2>
@@ -69,17 +81,6 @@
                     <a href="#" data-swup-transition="case-transition"></a>
                     <h2>ThredX</h2>
                     <div class="category-wrapper">
-                        <span class="btn-category">Branding</span>
-                        <span class="btn-category">Digital</span>
-                    </div>
-                </div>
-            </article>
-            <article class="case-small animate__animated animate__fadeInUp">
-                <div class="nori-intro case-small__inner" style="--background: #F3F5F6; --text: #4050F7;">
-                    <a href="/work/nori.html" data-swup-transition="case-transition"></a>
-                    <h2>Nori Kit</h2>
-                    <div class="category-wrapper">
-                        <span class="btn-category">Product</span>
                         <span class="btn-category">Branding</span>
                         <span class="btn-category">Digital</span>
                     </div>
@@ -108,8 +109,8 @@
 
             <article class="case-small animate__animated animate__fadeInUp">
                 <div class="case-small__inner" style="--background: #000000; --text: #DFE1EB;">
-                    <a href="#" data-swup-transition="case-transition"></a>
-                    <h2>Lightstage</h2>
+                    <a href="./work/lightstage.html" data-swup-transition="case-transition"></a>
+                    <h2>Light Stage</h2>
                     <div class="category-wrapper">
                         <span class="btn-category">Branding</span>
                     </div>
@@ -127,8 +128,8 @@
             </article>
 
             <article class="case-small animate__animated animate__fadeInUp">
-                <div class="case-small__inner" style="--background: #CECFD0; --text: #8D56E1;">
-                    <a href="#" data-swup-transition="case-transition"></a>
+                <div class="case-small__inner" style="--background: #CECFD0; --text: #161616;">
+                    <a href="./work/mtn.html" data-swup-transition="case-transition"></a>
                     <h2>Montana Procreate</h2>
                     <div class="category-wrapper">
                         <span class="btn-category">Product</span>
