--- a/about.html
+++ b/about.html
@@ -32,13 +32,13 @@
         <nav>
             <ul>
                 <li>
-                    <a href="../work.html">Work</a>
+                    <a class="text-link" href="./work.html">Work</a>
                 </li>
                 <li class="active">
-                    <a href="../about.html">About</a>
+                    <a class="text-link" href="./about.html">About</a>
                 </li>
                 <li>
-                    <a href="../shop.html">Shop</a>
+                    <a class="text-link" href="./shop.html">Shop</a>
                 </li>
                 <li>
                     <a class="text-link" href="./contact.html">Contact</a>
@@ -65,7 +65,7 @@
             </p>
         </div>
         
-        <img src="assets/images/brick-red-wall.svg" alt="" class="red-brick">
+        <img src="assets/images/brick-red-wall.svg" alt="" class="no-max red-brick">
         
         <div class="wrapper-inner wrapper-inner--burgundy">
             <div class="col-6" data-aos="fade">
