Added thredX case and added glide lib for slider

--- a/work.html
+++ b/work.html
@@ -67,7 +67,7 @@
 
             <article class="case-small animate__animated animate__fadeInUp">
                 <div class="case-small__inner" style="--background: #EFEEE8; --text: #1E1E1E;">
-                    <a href="#" data-swup-transition="case-transition"></a>
+                    <a href="./work/glyfit.html" data-swup-transition="case-transition"></a>
                     <h2>Glyfit</h2>
                     <div class="category-wrapper">
                         <span class="btn-category">Product</span>
@@ -77,8 +77,8 @@
             </article>
 
             <article class="case-small animate__animated animate__fadeInUp">
-                <div class="case-small__inner" style="--background: #E8E8DF; --text: #141414;">
-                    <a href="#" data-swup-transition="case-transition"></a>
+                <div class="case-small__inner" style="--background: #E8E8DF; --text: #161616;">
+                    <a href="./work/thredx.html" data-swup-transition="case-transition"></a>
                     <h2>ThredX</h2>
                     <div class="category-wrapper">
                         <span class="btn-category">Branding</span>
@@ -97,7 +97,7 @@
                 </div>
             </article>
 
-            <article class="case-small animate__animated animate__fadeInUp">
+            <!-- <article class="case-small animate__animated animate__fadeInUp">
                 <div class="case-small__inner" style="--background: #E8E8DF; --text: #141414;">
                     <a href="#" data-swup-transition="case-transition"></a>
                     <h2>ThredX app</h2>
@@ -105,7 +105,7 @@
                         <span class="btn-category">Product</span>
                     </div>
                 </div>
-            </article>
+            </article> -->
 
             <article class="case-small animate__animated animate__fadeInUp">
                 <div class="case-small__inner" style="--background: #000000; --text: #DFE1EB;">
@@ -117,7 +117,7 @@
                 </div>
             </article>
 
-            <article class="case-small animate__animated animate__fadeInUp">
+            <!-- <article class="case-small animate__animated animate__fadeInUp">
                 <div class="case-small__inner" style="--background: #121212; --text: #eeeeee;">
                     <a href="#" data-swup-transition="case-transition"></a>
                     <h2>Architechts</h2>
@@ -125,12 +125,12 @@
                         <span class="btn-category">Digital</span>
                     </div>
                 </div>
-            </article>
+            </article> -->
 
             <article class="case-small animate__animated animate__fadeInUp">
                 <div class="case-small__inner" style="--background: #CECFD0; --text: #161616;">
                     <a href="./work/mtn.html" data-swup-transition="case-transition"></a>
-                    <h2>Montana Procreate</h2>
+                    <h2>Montana Cans Procreate</h2>
                     <div class="category-wrapper">
                         <span class="btn-category">Product</span>
                         <span class="btn-category">Digital</span>
@@ -140,7 +140,7 @@
 
             <article class="case-small animate__animated animate__fadeInUp">
                 <div class="case-small__inner" style="--background: #EDF0F3; --text: #458EEC;">
-                    <a href="#" data-swup-transition="case-transition"></a>
+                    <a href="./work/glasin.html" data-swup-transition="case-transition"></a>
                     <h2>Glas In</h2>
                     <div class="category-wrapper">
                         <span class="btn-category">Digital</span>
@@ -150,7 +150,7 @@
 
             <article class="case-small animate__animated animate__fadeInUp">
                 <div class="case-small__inner" style="--background: #E6DFC8; --text: #405C41;">
-                    <a href="#" data-swup-transition="case-transition"></a>
+                    <a href="./work/420.html" data-swup-transition="case-transition"></a>
                     <h2>Friend Jen 420</h2>
                     <div class="category-wrapper">
                         <span class="btn-category">Branding</span>
@@ -160,7 +160,7 @@
 
             <article class="case-small animate__animated animate__fadeInUp">
                 <div class="case-small__inner" style="--background: #FFF7F0; --text: #1D7260;">
-                    <a href="#" data-swup-transition="case-transition"></a>
+                    <a href="./work/friendjen.html" data-swup-transition="case-transition"></a>
                     <h2>Friend Jen</h2>
                     <div class="category-wrapper">
                         <span class="btn-category">Digital</span>
