--- a/work/nori.html
+++ b/work/nori.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="../assets/normalize.css">
     <link rel="stylesheet" href="../assets/main.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <link rel="stylesheet" href="node_modules/@glidejs/glide/dist/css/glide.core.min.css">
+    <link rel="stylesheet" href="node_modules/@glidejs/glide/dist/css/glide.theme.min.css">
 </head>
 <body class="case nori">
 
@@ -162,7 +164,7 @@
                 <p>Components comes with multiple types, states, or sizes, and uses smart collection, base components and uses the latest components properties.</p>
                 <p>The kit contains of around: </p> 
                 <ul class="list">
-                    <li>i8k components and variants</li>
+                    <li>8k components and variants</li>
                     <li>200 templates</li>
                     <li>900 icons, flags and icons</li>
                     <li>70 global styles for typograpby, colors and shadows</li>
