Added case pics to nori and glyfit

--- a/work/glyfit.html
+++ b/work/glyfit.html
@@ -66,43 +66,29 @@
                 <p>
                     After a lot of back and forth with copying arrows, special characters and different currency symbols we thought it was time to actually make an online tool that has everything you need when it comes to special symbols and characthers.
                 </p>
-                <a class="text-link" href="http://norikit.com/?ref=fjaka" target="_blank">
-                    Visit live →</a>
+            </div>
+
+            <div class="col col-12" data-aos="fade-up">
+                <figure class="case-pic">
+                    <img class="lazyload" src="/assets/images/glyfit/case-pic-2.png" 
+                    data-sizes="auto" 
+                    data-src="/assets/images/glyfit/case-pic-2.png"
+                    data-srcset="/assets/images/glyfit/case-pic-2.png 500w,
+                    /assets/images/glyfit/case-pic-2.png 640w,
+                    /assets/images/glyfit/case-pic-2.png 1024w"
+                    alt="glyfit website">
+                </figure>
             </div>
 
             <div class="col col-12 col--no-margin" data-aos="fade-up">
                 <figure class="case-pic">
-                    <img class="lazyload" src="/assets/images/nori/case-pic-1.jpg" 
+                    <img class="lazyload" src="/assets/images/glyfit/case-pic-1.png" 
                     data-sizes="auto" 
-                    data-src="/assets/images/nori/case-pic-1.jpg"
-                    data-srcset="/assets/images/nori/case-pic-1.jpg 500w,
-                    /assets/images/nori/case-pic-1.jpg 640w,
-                    /assets/images/nori/case-pic-1.jpg 1024w"
-                    alt="Nori website">
-                </figure>
-            </div>
-
-            <div class="col col-8" data-aos="fade-up">
-                <figure class="case-pic">
-                    <img class="lazyload" src="/assets/images/nori/case-pic-2.jpg" 
-                    data-sizes="auto" 
-                    data-src="/assets/images/nori/case-pic-2.jpg"
-                    data-srcset="/assets/images/nori/case-pic-2.jpg 500w,
-                    /assets/images/nori/case-pic-2.jpg 640w,
-                    /assets/images/nori/case-pic-2.jpg 1024w"
-                    alt="Nori website">
-                </figure>
-            </div>
-
-            <div class="col col-4" data-aos="fade-up" data-aos-delay="300">
-                <figure class="case-pic">
-                    <img class="lazyload" src="/assets/images/nori/case-pic-3.jpg" 
-                    data-sizes="auto" 
-                    data-src="/assets/images/nori/case-pic-3.jpg"
-                    data-srcset="/assets/images/nori/case-pic-3.jpg 500w,
-                    /assets/images/nori/case-pic-3.jpg 640w,
-                    /assets/images/nori/case-pic-3.jpg 1024w"
-                    alt="Nori website">
+                    data-src="/assets/images/glyfit/case-pic-1.png"
+                    data-srcset="/assets/images/glyfit/case-pic-1.png 500w,
+                    /assets/images/glyfit/case-pic-1.png 640w,
+                    /assets/images/glyfit/case-pic-1.png 1024w"
+                    alt="glyfit website">
                 </figure>
             </div>
         </div>
