--- a/about.html
+++ b/about.html
@@ -32,16 +32,16 @@
         <nav>
             <ul>
                 <li>
-                    <a class="text-link" href="./work.html">Work</a>
+                    <a class="text-link" href="/work.html">Work</a>
                 </li>
                 <li class="active">
-                    <a class="text-link" href="./about.html">About</a>
+                    <a class="text-link" href="/about.html">About</a>
                 </li>
                 <li>
-                    <a class="text-link" href="./shop.html">Shop</a>
+                    <a class="text-link" href="/shop.html">Shop</a>
                 </li>
                 <li>
-                    <a class="text-link" href="./contact.html">Contact</a>
+                    <a class="text-link" href="/contact.html">Contact</a>
                 </li>
             </ul>
         </nav>
@@ -68,11 +68,11 @@
         <img src="assets/images/brick-red-wall.svg" alt="" class="no-max red-brick">
         
         <div class="wrapper-inner wrapper-inner--burgundy">
-            <div class="col-6" data-aos="fade">
+            <div class="col col-6" data-aos="fade">
                 <h2>We believe in that invention beats convention</h2>
             </div>
 
-            <div class="col-6" data-aos="fade">
+            <div class="col col-6" data-aos="fade">
                 <p>
                     On the other side of this screen, there's a perfectly sized team of well-tempered creative professionals ready to find the bestest animated solution for your business. Animation is our business and we use it to drive yours. We speak fluent corporate and we’re just one e-mail away!
                 </p>
@@ -95,12 +95,12 @@
 
         <div class="wrapper-inner wrapper-inner--pink">
 
-            <div class="col-12">
+            <div class="col col-12">
                 <h2 data-aos="fade">Awards n’ stuff</h2>
                 <div class="row" data-aos="fade">
-                    <p class="col-7">We know that awards work well! Both - for us and you. Here’s a few recognitions that we’ve recivied, which we are very greatful for.</p>
+                    <p class="col col-7">We know that awards work well! Both - for us and you. Here’s a few recognitions that we’ve recivied, which we are very greatful for.</p>
                     
-                    <ul class="col-5 list">
+                    <ul class="col col-5 list">
                         <li>2x Honourable Mention Awwwards</li>
                         <li>CSSDA Best UI design</li>
                         <li>CSSDA Best innovation</li>
@@ -145,10 +145,9 @@
                 </ul>
             </div>
 
-            <div class="col-3">
+            <div class="col-3 col-3-last">
                 <a class="paragraph" href="https://www.google.com/maps/place/Adelgatan+19A,+211+22+Malm%C3%B6/@55.6071186,12.9995299,3a,75y,333.85h,92.55t/data=!3m6!1e1!3m4!1s8UrgduxmWdv4VqvRZjxnHQ!2e0!7i13312!8i6656!4m5!3m4!1s0x4653a3fc1fba1941:0x8350d79b5254a276!8m2!3d55.6072002!4d12.9996335" target="_blank">Adelgatan 19a <br>21122 Malmö</a>
                 <p>© 2022 by Fjaka</p>
-                <a class="paragraph footer-link" href="/manifesto.html">Manifesto</a>
             </div>
         </div>
     </main>
