--- a/shop.html
+++ b/shop.html
@@ -132,10 +132,9 @@
             </ul>
         </div>
 
-        <div class="col-3">
+        <div class="col-3 col-3-last">
             <a class="paragraph" href="https://www.google.com/maps/place/Adelgatan+19A,+211+22+Malm%C3%B6/@55.6071186,12.9995299,3a,75y,333.85h,92.55t/data=!3m6!1e1!3m4!1s8UrgduxmWdv4VqvRZjxnHQ!2e0!7i13312!8i6656!4m5!3m4!1s0x4653a3fc1fba1941:0x8350d79b5254a276!8m2!3d55.6072002!4d12.9996335" target="_blank">Adelgatan 19a <br>21122 Malmö</a>
             <p>© 2022 by Fjaka</p>
-            <a class="paragraph footer-link" href="/manifesto.html">Manifesto</a>
         </div>
     </div>
 </main>
