Fixed link url for app js

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             alt="shadow">
 
             <div class="front-info__text">
-                <h2 g-component="SeparateText" class="heading-one" data-aos="fade">
+                <h2 g-component="SeparateText" class="heading-one">
                     Some of our latest and greatest work 
                 </h2>
 
@@ -109,15 +109,15 @@
             <div class="case-intro__text">
 
                 <div class="case-intro__text__inner">
-                    <h2 g-component="SeparateText" class="heading-two" data-aos="fade">Stunning prototypes with Norikit</h2>
-                    <p class="big-paragraph" data-aos="fade">
+                    <h2 g-component="SeparateText" class="heading-two">Stunning prototypes with Norikit</h2>
+                    <p class="big-paragraph">
                         Nori Kit combines the best parts of productivity and design with a complete wireframe kit produced in Figma to help teams create beautifully designed prototypes in minutes.
                     </p>
                 </div>
 
                 <a href="/work/nori.html" 
                 class="btn btn--outline"
-                data-aos="fade"
+            
                 style="--btn-color: #4050F7;
                 --btn-text: #fff;">Read more</a>
             </div>
@@ -135,13 +135,13 @@
             <div class="case-intro__text">
 
                 <div class="case-intro__text__inner">
-                    <h2 g-component="SeparateText" class="heading-two" data-aos="fade">The world's most modern wardrobe</h2>
-                    <p class="big-paragraph" data-aos="fade">
+                    <h2 g-component="SeparateText" class="heading-two">The world's most modern wardrobe</h2>
+                    <p class="big-paragraph">
                         ThredX is a female-founded startup that want’s to change the digital fashion game. Technology has dramatically improved operations for retailers and brands, yet there is no technology for us on the other side.
                     </p>
                 </div>
                 <a href="/work/thredx.html" 
-                class="btn btn--outline"  data-aos="fade"
+                class="btn btn--outline" 
                 style="--btn-color: #141414;
                 --btn-text: #E8E8DF;">Read more</a>
             </div>
@@ -162,14 +162,14 @@
             <div class="case-intro__text">
 
                 <div class="case-intro__text__inner">
-                    <h2 g-component="SeparateText" class="heading-two" data-aos="fade">Show the beauty of Malmö</h2>
-                    <p class="big-paragraph" data-aos="fade">
+                    <h2 g-component="SeparateText" class="heading-two">Show the beauty of Malmö</h2>
+                    <p class="big-paragraph">
                         How we helped a new start up to find their identity, art style and launch a beautiful e-commerce experience.
                     </p>
                 </div>
 
                 <a href="/work/hom.html" 
-                class="btn btn--outline" data-aos="fade"
+                class="btn btn--outline"
                 style="--btn-color: #E6DAD8;
                 --btn-text: #DC5842;">Read more</a>
             </div>
@@ -229,6 +229,6 @@
         </div>
     </main>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bodymovin/5.6.5/lottie.min.js"></script>
-    <script src="../assets/app.js"></script>
+    <script src="/assets/app.js"></script>
 </body>
 </html>
