--- a/work/friendjen.html
+++ b/work/friendjen.html
@@ -249,6 +249,6 @@
         </div>
     </main>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bodymovin/5.6.5/lottie.min.js"></script>
-    <script src="../assets/app.js"></script>
+    <script src="/assets/app.js"></script>
 </body>
 </html>
